--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto " href="#section_110029239">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -645,7 +645,7 @@
               <div class="product-small box has-hover box-normal box-text-bottom">
                 <div class="box-image">
                   <div class>
-                    <a href="#">
+                    <a href="#about">
                       <img width="auto" height="300" src="assets/img/mbl/cars/Raize.png" alt="innova">
                     </a>
                   </div>
