--- a/index.html
+++ b/index.html
@@ -228,6 +228,51 @@
     </section>
     <!-- ===== END OF PROJECT ===== -->
 
+    <!-- ===== START TRIAL CAR ===== -->
+    <section class="section" id="section_cars">
+      <div class="bg section-bg fill bg-fill bg-loaded"></div>
+      <div class="section-content relative">
+        <div class="row" id="row-cars">
+          <div id="row-cars1" class="col small-12 large-12">
+            <div class="col-inner text-center">
+              <h1 style>
+                <span style="font-size: 120%">
+                <strong style>PRODUK BARU TOYOTA</strong>
+              </span>
+              </h1>
+            </div>
+          </div>
+        </div>
+        <div class="row  equalize-box large-columns-4 medium-columns-3 small-columns-2 row-normal">
+          <div class="col">
+            <div class="col-inner">
+              <div class="badge-container absolute left top z-1"> </div>
+              <div class="product-small box has-hover box-normal box-text-bottom">
+                <div class="box-image">
+                  <div class>
+                    <a href="assets/img/mbl/cars/InnovaZenix.png">
+                      <img width="300" height="300" src="assets/img/mbl/cars/AvanzaVeloz.png" alt decoding ="async" loading="lazy" srcset="assets/img/mbl/cars/AvanzaVeloz.png" sizes="(max-width: 300px) 100w, 300px">
+                    </a>
+                    <div class="image-tools top right show-on-hover"> </div>
+                  </div>
+                  <div class="image-tools top right show-on-hover"> 
+                  </div>
+                  <div class="image-tools grid-tools text-center hide-for-small bottom hover-slide-in show-on-hover">
+                    <a class="quick-view quick-view-added" data-prod="863" href="#quick-view" style> Quick View</a>
+                  </div>  
+                </div>
+               
+
+                <div class="box-text text-center dark" style="background-color:rgb(3, 91, 170);"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row" id="explore-cars"></div>
+      </div>
+    </section>
+    <!-- ===== END TRIAL CAR ===== -->
+
     <!-- ===== SECTION CAR ===== -->
     <section class="section" id="section_110029239">
       <div class="bg section-bg fill bg-fill bg-loaded"></div>
