--- a/index.html
+++ b/index.html
@@ -244,29 +244,152 @@
           </div>
         </div>
         <div class="row  equalize-box large-columns-4 medium-columns-3 small-columns-2 row-normal">
-          <div class="col">
+          <div class="col" >
             <div class="col-inner">
-              <div class="badge-container absolute left top z-1"> </div>
+              <div class="badge-container absolute left top z-1"></div>
               <div class="product-small box has-hover box-normal box-text-bottom">
                 <div class="box-image">
                   <div class>
-                    <a href="assets/img/mbl/cars/InnovaZenix.png">
-                      <img width="300" height="300" src="assets/img/mbl/cars/AvanzaVeloz.png" alt decoding ="async" loading="lazy" srcset="assets/img/mbl/cars/AvanzaVeloz.png" sizes="(max-width: 300px) 100w, 300px">
+                    <a href="assets/img/mbl/cars/AvanzaVeloz.png">
+                      <img width="300" height="300" src="assets/img/mbl/cars/AvanzaVeloz.png" alt decoding="async" loading="lazy">
                     </a>
-                    <div class="image-tools top right show-on-hover"> </div>
                   </div>
-                  <div class="image-tools top right show-on-hover"> 
-                  </div>
+                  <div class="image-tools top right show-on-hover"></div>
                   <div class="image-tools grid-tools text-center hide-for-small bottom hover-slide-in show-on-hover">
-                    <a class="quick-view quick-view-added" data-prod="863" href="#quick-view" style> Quick View</a>
-                  </div>  
+                    <a class="quick-view quick-view-added" data-prod="863" href="#quick-view"> Quick View </a>
+                  </div>
                 </div>
-               
-
-                <div class="box-text text-center dark" style="background-color:rgb(3, 91, 170);"></div>
+                <div class="box-text text-center dark" style="background-color: rgb(3,91,170);">
+                  <div class="title-wrapper">
+                    <p class="category uppercase is-smaller no-text-overflow product-cat op-7">
+                      TOYOTA 2022
+                    </p>
+                    <p class="name product-title woocommerce-loop-product__title" style="height: 41.4167px;">
+                      <a href="#"> New Dyna</a>
+                    </p>
+                  </div>
+                  <div class="price-wrapper" style="height: 0px;"></div>
+                </div>
               </div>
             </div>
           </div>
+          <div class="col" >
+            <div class="col-inner">
+              <div class="badge-container absolute left top z-1"></div>
+              <div class="product-small box has-hover box-normal box-text-bottom">
+                <div class="box-image">
+                  <div class>
+                    <a href="assets/img/mbl/cars/AvanzaVeloz.png">
+                      <img width="300" height="300" src="assets/img/mbl/cars/AvanzaVeloz.png" alt decoding="async" loading="lazy">
+                    </a>
+                  </div>
+                  <div class="image-tools top right show-on-hover"></div>
+                  <div class="image-tools grid-tools text-center hide-for-small bottom hover-slide-in show-on-hover">
+                    <a class="quick-view quick-view-added" data-prod="863" href="#quick-view"> Quick View </a>
+                  </div>
+                </div>
+                <div class="box-text text-center dark" style="background-color: rgb(3,91,170);">
+                  <div class="title-wrapper">
+                    <p class="category uppercase is-smaller no-text-overflow product-cat op-7">
+                      TOYOTA 2022
+                    </p>
+                    <p class="name product-title woocommerce-loop-product__title" style="height: 41.4167px;">
+                      <a href="#"> New Dyna</a>
+                    </p>
+                  </div>
+                  <div class="price-wrapper" style="height: 0px;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col" >
+            <div class="col-inner">
+              <div class="badge-container absolute left top z-1"></div>
+              <div class="product-small box has-hover box-normal box-text-bottom">
+                <div class="box-image">
+                  <div class>
+                    <a href="assets/img/mbl/cars/AvanzaVeloz.png">
+                      <img width="300" height="300" src="assets/img/mbl/cars/AvanzaVeloz.png" alt decoding="async" loading="lazy">
+                    </a>
+                  </div>
+                  <div class="image-tools top right show-on-hover"></div>
+                  <div class="image-tools grid-tools text-center hide-for-small bottom hover-slide-in show-on-hover">
+                    <a class="quick-view quick-view-added" data-prod="863" href="#quick-view"> Quick View </a>
+                  </div>
+                </div>
+                <div class="box-text text-center dark" style="background-color: rgb(3,91,170);">
+                  <div class="title-wrapper">
+                    <p class="category uppercase is-smaller no-text-overflow product-cat op-7">
+                      TOYOTA 2022
+                    </p>
+                    <p class="name product-title woocommerce-loop-product__title" style="height: 41.4167px;">
+                      <a href="#"> New Dyna</a>
+                    </p>
+                  </div>
+                  <div class="price-wrapper" style="height: 0px;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col" >
+            <div class="col-inner">
+              <div class="badge-container absolute left top z-1"></div>
+              <div class="product-small box has-hover box-normal box-text-bottom">
+                <div class="box-image">
+                  <div class>
+                    <a href="assets/img/mbl/cars/AvanzaVeloz.png">
+                      <img width="300" height="300" src="assets/img/mbl/cars/AvanzaVeloz.png" alt decoding="async" loading="lazy">
+                    </a>
+                  </div>
+                  <div class="image-tools top right show-on-hover"></div>
+                  <div class="image-tools grid-tools text-center hide-for-small bottom hover-slide-in show-on-hover">
+                    <a class="quick-view quick-view-added" data-prod="863" href="#quick-view"> Quick View </a>
+                  </div>
+                </div>
+                <div class="box-text text-center dark" style="background-color: rgb(3,91,170);">
+                  <div class="title-wrapper">
+                    <p class="category uppercase is-smaller no-text-overflow product-cat op-7">
+                      TOYOTA 2022
+                    </p>
+                    <p class="name product-title woocommerce-loop-product__title" style="height: 41.4167px;">
+                      <a href="#"> New Dyna</a>
+                    </p>
+                  </div>
+                  <div class="price-wrapper" style="height: 0px;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col" >
+            <div class="col-inner">
+              <div class="badge-container absolute left top z-1"></div>
+              <div class="product-small box has-hover box-normal box-text-bottom">
+                <div class="box-image">
+                  <div class>
+                    <a href="assets/img/mbl/cars/AvanzaVeloz.png">
+                      <img width="300" height="300" src="assets/img/mbl/cars/AvanzaVeloz.png" alt decoding="async" loading="lazy">
+                    </a>
+                  </div>
+                  <div class="image-tools top right show-on-hover"></div>
+                  <div class="image-tools grid-tools text-center hide-for-small bottom hover-slide-in show-on-hover">
+                    <a class="quick-view quick-view-added" data-prod="863" href="#quick-view"> Quick View </a>
+                  </div>
+                </div>
+                <div class="box-text text-center dark" style="background-color: rgb(3,91,170);">
+                  <div class="title-wrapper">
+                    <p class="category uppercase is-smaller no-text-overflow product-cat op-7">
+                      TOYOTA 2022
+                    </p>
+                    <p class="name product-title woocommerce-loop-product__title" style="height: 41.4167px;">
+                      <a href="#"> New Dyna</a>
+                    </p>
+                  </div>
+                  <div class="price-wrapper" style="height: 0px;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
         <div class="row" id="explore-cars"></div>
       </div>
@@ -288,7 +411,7 @@
             </div>
           </div>
         </div>
-        <div class="row equalize-box large-columns-4 medium-columns-3 small-columns-2 row-normal" id="colcars">
+        <div class="row  equalize-box large-columns-4 medium-columns-3 small-columns-2 row-normal" id="colcars">
           <div class="col">
             <div class="col-inner">
               <div class="badge-container absolute left top z-1"></div>
@@ -320,7 +443,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <!-- <div class="col">
             <div class="col-inner">
               <div class="badge-container absolute left top z-1"></div>
               <div class="product-small box has-hover box-normal box-text-bottom">
@@ -350,7 +473,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
           <div class="col">
             <div class="col-inner">
               <div class="badge-container absolute left top z-1"></div>
@@ -640,7 +763,7 @@
 
         <div class="row">
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
+            <div class="member">
               <div class="member-img">
                 <img src="assets/img/aza.png" class="img-fluid" alt="">
                 <div class="social">
@@ -706,10 +829,27 @@
   <!--===== Footer =====-->
 
   <footer id="footer">
-    <div class="footer-12">
-      <div class="bag1">a</div>
-      <div class="bag1">b</div>
-      <div class="bag1">c</div>
+    <div class="row">
+
+      <div class="column-footer">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias possimus facilis accusantium vel, aliquam quis! Nostrum beatae molestias animi voluptas assumenda! Enim, aspernatur perspiciatis! Quia explicabo quod rerum vitae dolorem.</p>
+      </div>
+
+      <div class="column-footer">
+        <h3>Follow us</h3>
+      </div>
+      
+      <div class="column-footer">
+        <div class="mapouter">
+          <div class="gmap_canvas">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3966.5425200082577!2d106.8751618152106!3d-6.191911495517396!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f5444c66c16d%3A0x2df9e4581f3e7a9b!2sPlaza%20Toyota%20Pemuda!5e0!3m2!1sid!2sid!4v1670039801921!5m2!1sid!2sid" width="500" height="250" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>
+          </div>
+          <!-- <style>.mapouter{position:relative;text-align:right;width:100%;height:300px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:300px;}.gmap_iframe {height:300px!important;} -->
+          <!-- </style> -->
+        </div>
+      </div>
+
     </div>
   </footer>
 
